# Edu-Guard

./: .replit  README.md  db.sqlite  main.py  pyproject.toml  replit.md  requirements.txt
.local/state/replit/: log-query.db-shm  log-query.db-wal
.local/state/workflow-logs/R2l7UP2ybkdtT66t9rPwy/: metadata.json
.local/state/workflow-logs/T0I-l8s9Fx-AXzVEFmA3o/: Start application.shell.exec.0  metadata.json
.local/state/workflow-logs/Vv2k6szRpnjfS3V56aM55/: Start application.shell.exec.0  metadata.json
.local/state/workflow-logs/rbrG04e2AXxshXtOjOEuX/: metadata.json
attached_assets/: Pasted-Build-a-complete-working-hackathon-prototype-for-Online_1772972702894.txt
static/: admin.html  admin.js  exam.js  index.html  style.css
