[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.135.1",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "scipy>=1.17.1",
    "uvicorn[standard]>=0.41.0",
]
